example-file/swh-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault
        vault_access: "true"
      annotations:
        vault.security.banzaicloud.io/vault-addr: "https://ha-vault.ha-vault:8200" # optional, the address of the Vault service, default values is https://vault:8200
        vault.security.banzaicloud.io/vault-role: "app" # optional, the default value is the name of the ServiceAccount the Pod runs in, in case of Secrets and ConfigMaps it is "default"
        vault.security.banzaicloud.io/vault-skip-verify: "true" # optional, skip TLS verification of the Vault server certificate
        vault.security.banzaicloud.io/vault-path: "app/kubernetes" # optional, the Kubernetes Auth mount path in Vault the default value is "kubernetes"        
    spec:
      serviceAccountName: default
      containers:
      - name: alpine
        image: alpine
        command: ["sh", "-c", "echo $AWS_SECRET_ACCESS_KEY > /tmp/swh-test && echo going to sleep... && sleep 10000"]
