example-file/tls-ingress-example.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: transit-vault
spec:
  rules:
  - host: vault.example.com
    http:
      paths:
      - backend:
          service:
            name: ha-vault
            port:
              number: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
      - vault.example.com
    secretName: vault-example-tls
